--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 
-<html>
-    <head>
-        <title>My first webpage</title>
-    </head>
-    <body>
-        <img src="images/mypic.JPG">
-        <p>@lukeyyfrancis</p>
-        <p>I love to learn HTML!</p>
-    </body>
+<html lang="en">
+  <head>
+    <title>My first webpage</title>
+    <style>
+      img {
+        width: 100px;
+        border-radius: 50px;
+        float: left;
+        margin-right: 10px;
+      }
+      .username {
+        font-weight: bold;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="images/mypic.JPG" alt="An image of Luke Francis">
+    <p class="username">@lukeyyfrancis</p>
+    <p>I love to learn HTML!</p>
+  </body>
 </html>
